Fix up flash alignment in ff. Still has bugs in chrome.

--- a/views/sass/style.scss
+++ b/views/sass/style.scss
@@ -601,6 +601,11 @@ body {
     font-size: 4.5em;
     margin: 15px 0 10px 0;
   }
+  
+  #flash {
+    top: 125px;
+  }
+  
   #main {
     width: 770px;
     padding: 10px;
